--- a/exo2/geoloc.html
+++ b/exo2/geoloc.html
@@ -7,13 +7,14 @@
 </head>
 <body>  
 
-    <h1>Exercice 3</h1>
-    <p>Axe X : <span id="longitude"></span></p>
-    <p>Axe Y<span id="latitude"></span></p>
-    <p>Axe Z<span id="speed"></span></p>
-    <!-- <p>Timestamp : <span id="timestamp"></span></p> -->
-
+    <h1>Exercice 2</h1>
+    <p>Longitude : <span id="longitude"></span></p>
+    <p>Lattitude : <span id="latitude"></span></p>
+    <p>Speed : <span id="speed"></span></p>
+    <p>Timestamp : <span id="timestamp"></span></p>
+    
     <script src="main.js"></script>
+
     
 </body>
 </html>
