--- a/exo3/geoloc.html
+++ b/exo3/geoloc.html
@@ -7,11 +7,15 @@
 </head>
 <body>  
 
-    <h1>Exercice 2</h1>
-    <p>Longitude : <span id="longitude"></span></p>
-    <p>Lattitude : <span id="latitude"></span></p>
-    <p>Speed : <span id="speed"></span></p>
-    <p>Timestamp : <span id="timestamp"></span></p>
+
+    <h1>Exercice 3</h1>
+    <p>Axe X : <span id="x"></span></p>
+    <p>Axe Y<span id="y"></span></p>
+    <p>Axe Z<span id="z"></span></p>
+    <p>orientation<span id="absolute"></span></p>
+    <!-- <p>Timestamp : <span id="timestamp"></span></p> -->
+
+    <p id="orientation"></p>
 
     <script src="main.js"></script>
     
