--- a/exo4/geoloc.html
+++ b/exo4/geoloc.html
@@ -6,15 +6,14 @@
     <title>Geolocalisation</title>
 </head>
 <body>  
+    
+    <p>Position écran<span id="position"></span></p>
+    <p>Type d'evenement<span id="event"></span></p>
 
+    <canvas style="background-color: grey;">
 
-    <h1>Exercice 3</h1>
-    <p>Axe X : <span id="x"></span></p>
-    <p>Axe Y<span id="y"></span></p>
-    <p>Axe Z<span id="z"></span></p>
-    <p>orientation<span id="absolute"></span></p>
+    </canvas>
 
-    <p id="orientation"></p>
 
     <script src="main.js"></script>
     
