--- a/exo4/geoloc.html
+++ b/exo4/geoloc.html
@@ -7,10 +7,15 @@
 </head>
 <body>  
     
-    <p>Position écran<span id="position"></span></p>
-    <p>Type d'evenement<span id="event"></span></p>
+    <p>Position écran :<span id="position"></span></p>
+    <p>Axe X : <span id="x"></span></p>
+    <p>Axe Y<span id="y"></span></p>
 
-    <canvas style="background-color: grey;">
+
+    <p>Type d'evenement :<span id="event"></span></p>
+    <p id="el"></p>
+
+    <canvas style="background-color: grey;" id="canvas">
 
     </canvas>
 
