--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
-<p>Bonjour</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Geolocalisation - Florian Laffargue</title>
+</head>
+<body>
+    
+    <h1>TP1</h1>
+    <ul>
+        <li><a href="TP1/exo2/geoloc.html">Exo2</a></li>
+        <li><a href="TP1/exo3/geoloc.html">Exo3</a></li>
+        <li><a href="TP1/exo4/geoloc.html">Exo4</a></li>
+    </ul>
+</body>
+</html>
 
