--- a/TP1/exo3/geoloc.html
+++ b/TP1/exo3/geoloc.html
@@ -6,6 +6,8 @@
     <title>Geolocalisation</title>
 </head>
 <body>  
+    <p id="orientation"></p>
+    
     <h1>Orientation</h1>
     <ul>
         <li>Axe X :<span id="xO"></span></li>
