--- a/TP1/exo3/geoloc.html
+++ b/TP1/exo3/geoloc.html
@@ -7,7 +7,7 @@
 </head>
 <body>  
     <p id="orientation"></p>
-    
+
     <h1>Orientation</h1>
     <ul>
         <li>Axe X :<span id="xO"></span></li>
@@ -19,9 +19,9 @@
     
     <h2>Acceleration</h2>
     <ul>
-        <li>Axe X :<span id="xM"></span></li>
-        <li>Axe Y :<span id="yM"></span></li>
-        <li>Axe Z :<span id="zM"></span></li>
+        <li>Axe X :<span id="xA"></span></li>
+        <li>Axe Y :<span id="yA"></span></li>
+        <li>Axe Z :<span id="zA"></span></li>
     </ul>
 
     <h2>Rotation</h2>
