--- a/TP2/exo3/index.html
+++ b/TP2/exo3/index.html
@@ -12,7 +12,19 @@
     </style>
 </head>
 <body>
-    <h1>Cartes</h1>
+    <h1>Géoloc par département</h1>
+
+    <p>Selectionner un département pour y voir apparaitre les communes associées (les dpts n'y figurent pas tous car j'avais un peu la flemme :)</p>
+
+    <select name="list" id="list">
+        <option value="0" selected>Departements</option>
+        <option value="13">13</option>
+        <option value="06">06</option>
+        <option value="75">75</option>
+        <option value="76">76</option>
+        <option value="77">77</option>
+        <option value="78">78</option>
+    </select>
 
     <div id="mapid"></div>
 
@@ -23,5 +35,13 @@
     <script type="text/javascript" src=" https://stamen-maps.a.ssl.fastly.net/js/tile.stamen.js"></script>
 
     <script src="map.js"></script>
+
+    <script>
+        document.querySelector('#list').addEventListener('change', function(e) {
+            if(e.target.value != "0") {
+                fetchDpts(e.target.value)
+            }
+        })
+    </script>
 </body>
 </html>
