--- a/TP1/exo2 - geolo/geoloc.html
+++ b/TP1/exo2 - geolo/geoloc.html
@@ -6,7 +6,9 @@
     <title>Geolocalisation</title>
 </head>
 <body>  
-
+    
+    <a href="../../index.html">Revenir page d'accueil</a>
+    
     <p>Longitude : <span id="longitude"></span></p>
     <p>Lattitude : <span id="latitude"></span></p>
     <p>Speed : <span id="speed"></span></p>
