--- a/TP1/exo3 - orientation et mouvement/geoloc.html
+++ b/TP1/exo3 - orientation et mouvement/geoloc.html
@@ -6,6 +6,8 @@
     <title>Geolocalisation</title>
 </head>
 <body>  
+    <a href="../../index.html">Revenir page d'accueil</a>
+
     <p id="orientation"></p>
 
     <h1>Orientation</h1>
