--- a/TP1/exo4 - touchevent/geoloc.html
+++ b/TP1/exo4 - touchevent/geoloc.html
@@ -6,6 +6,7 @@
     <title>Geolocalisation</title>
 </head>
 <body>  
+    <a href="../../index.html">Revenir page d'accueil</a>
     
     <p>Position du toucher par rapport à l'écran :<span id="position"></span></p>
     <p>Axe X : <span id="x"></span></p>
