--- a/TP2/exo3/index.html
+++ b/TP2/exo3/index.html
@@ -12,6 +12,8 @@
     </style>
 </head>
 <body>
+    <a href="../../index.html">Revenir page d'accueil</a>
+
     <h1>Géoloc par département</h1>
 
     <p>Selectionner un département pour y voir apparaitre les communes associées (les dpts n'y figurent pas tous car j'avais un peu la flemme :)</p>
