--- a/TP2/exo1/index.html
+++ b/TP2/exo1/index.html
@@ -12,6 +12,8 @@
     </style>
 </head>
 <body>
+    <a href="../../index.html">Revenir page d'accueil</a>
+
     <h1>Geoloc : basiques</h1>
 
     <div id="mapid"></div>
