--- a/TP2/exo2/index.html
+++ b/TP2/exo2/index.html
@@ -12,6 +12,8 @@
     </style>
 </head>
 <body>
+    <a href="../../index.html">Revenir page d'accueil</a>
+    
     <h1>Geoloc : distance</h1>
 
     <p>Selectionner une ville pour calculer la distance entre cette même ville et votre position actuelle</p>
