--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
             <li><a href="TP2/exo3/index.html">Exo3 : Ajouter des données GeoJson</a></li>
         </ul>
 
+        <h1>TP3</h1>
+        <ul>
+            <li><a href="TP3/exo1/index.html">Exo1 : Dessiner dans un canvas</a></li>
+            <li><a href="TP3/exo1/index2.html">Exo1 : Dessiner dans un svg</a></li>
+            <li><a href="TP3/exo2/index.html">Exo2 : Créer une scene three.js</a></li>
+        </ul>
+
     </div>
 
 </body>
