--- a/TP3/exo3/index.html
+++ b/TP3/exo3/index.html
@@ -10,9 +10,12 @@
         
     </head>
 	<body>
+		<script src="geoloc.js"></script>
 		<script src="https://threejs.org/build/three.js"></script>
 		<script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
 		<script src="https://threejs.org//examples/js/loaders/GLTFLoader.js"></script>
+
+		<script src="function.js"></script>
 		<script src="main.js"></script>
 		
 	</body>
