--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             <li><a href="TP3/exo3/index.html">Exo3: Créer un globe</a></li>
         </ul>
 
+        <h1>TD</h1>
+        <ul>
+            <li><a href="TD/index.html">Exo1 : Dessiner une aiguille</a></li>
+        </ul>
     </div>
 
 </body>
