--- a/TD/index.html
+++ b/TD/index.html
@@ -34,7 +34,7 @@
 
         <h1>Boussole en svg</h1>
         <!-- Boussole -->
-        <svg
+        <!--<svg
         xmlns:dc="http://purl.org/dc/elements/1.1/"
         xmlns:cc="http://creativecommons.org/ns#"
         xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -433,7 +433,7 @@
                 style="fill:url(#linearGradient3325);fill-opacity:1" />
             </g>
         </g>
-        </svg>
+        </svg>-->
         <!-- Aiguille -->
         <svg
         xmlns:dc="http://purl.org/dc/elements/1.1/"
