--- a/TD/leaflet.html
+++ b/TD/leaflet.html
@@ -13,16 +13,15 @@
     <link rel="stylesheet" href="leaflet-compass.css">
 </head>
 <body>
-    <a href="../../index.html">Revenir page d'accueil</a>
+    <a href="index.html">Revenir page précédente</a>
     
-    <h1>Geoloc : distance</h1>
+    <h1>TD: partie Leaflet</h1>
 
     <div id="mapid"></div>
     
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
-    <script type="text/javascript" src=" https://stamen-maps.a.ssl.fastly.net/js/tile.stamen.js"></script>
     <script src="leaftlet-compass.js"></script>
     <script src="map.js"></script>
 
