--- a/TD/index.html
+++ b/TD/index.html
@@ -28,7 +28,9 @@
         <!-- Canvas -->
         <h1>Boussole avec canvas</h1>
 
-        <canvas id="canvas" width="500" height="500"></canvas>
+        <canvas id="canvas" width="500" height="500">
+        </canvas>
+        <img src="compass.png" alt="">
                 
         <hr>
         <!-- SVG -->
@@ -164,6 +166,8 @@
             <li>Axe Y : <span id="yO"></span></li>
             <li>Axe Z :<span id="zO"></span></li>
         </ul>
+
+        <hr>
 
     </div>
 
