--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <h1>TD</h1>
         <ul>
-            <li><a href="TD/index.html">Exo1 : Dessiner une aiguille</a></li>
+            <li><a href="TD/index.html">Exo1 : Dessiner une boussole</a></li>
         </ul>
     </div>
 
