--- a/TD/index.html
+++ b/TD/index.html
@@ -159,6 +159,13 @@
         <h1>Leaftlet</h1>
         <a href="leaflet.html">Aller à leaflet</a>
 
+        <h1>Orientation</h1>
+        <ul>
+            <li>Axe X :<span id="xO"></span></li>
+            <li>Axe Y : <span id="yO"></span></li>
+            <li>Axe Z :<span id="zO"></span></li>
+        </ul>
+
         <hr>
 
     </div>
